tests/neg/static-no-companion.scala
import annotation.static
object T {
  @static val foo = 10 // error: needs companion class
}
